[gd_scene load_steps=16 format=3 uid="uid://cn0ixqjqcttge"]

[ext_resource type="Texture2D" uid="uid://dcgh41pr5y84q" path="res://icbm.png" id="1_n2c48"]
[ext_resource type="Script" path="res://icbm.gd" id="1_pm2g5"]
[ext_resource type="Texture2D" uid="uid://ccm62f3xl5my2" path="res://icbm_explosion.png" id="3_0271o"]
[ext_resource type="AudioStream" uid="uid://nu7m0wx5kgsf" path="res://322491__liamg_sfx__explosion-7a.wav" id="4_3nr75"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3vt3b"]
atlas = ExtResource("1_n2c48")
region = Rect2(0, 0, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_a56y8"]
atlas = ExtResource("1_n2c48")
region = Rect2(16, 0, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ellv1"]
atlas = ExtResource("3_0271o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqyuq"]
atlas = ExtResource("3_0271o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rpgj"]
atlas = ExtResource("3_0271o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6505"]
atlas = ExtResource("3_0271o")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnllf"]
atlas = ExtResource("3_0271o")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oexd2"]
atlas = ExtResource("3_0271o")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pght"]
atlas = ExtResource("3_0271o")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_1omoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vt3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a56y8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ellv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqyuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rpgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6505")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnllf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oexd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pght")
}],
"loop": false,
"name": &"explosion",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi8om"]
size = Vector2(16, 26)

[node name="icbm" type="Area2D"]
texture_filter = 1
collision_layer = 0
collision_mask = 3
script = ExtResource("1_pm2g5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.42109e-14, 6)
scale = Vector2(1.78125, 1.78125)
sprite_frames = SubResource("SpriteFrames_1omoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_oi8om")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3nr75")
pitch_scale = 0.8
area_mask = 0

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
